test/files/neg/t8700b-old/Foo_1.java
// javaVersion: 8
public enum Foo_1 {
    A,
    B
}
